add CorePagination